--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "webchatplayer",
+  "name": "wechatplayer",
   "description": "A Vue.js project",
   "version": "1.0.0",
-  "author": "Lynn <1015448230@qq.com>",
+  "author": "airzhanglin <1015448230@qq.com>",
   "license": "MIT",
-  "private": true,
+  "private": false,
   "main": "dist/wechatPlayer.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "webchatplayer": "^1.0.0"
   },
   "browserslist": [
     "> 1%",
