--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "vue": "^2.5.11",
-    "webchatplayer": "^1.0.0"
+    "wechatplayer": "^1.0.0"
   },
   "browserslist": [
     "> 1%",
