--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wechatplayer",
   "description": "A Vue.js project",
-  "version": "1.0.1",
+  "version": "1.2.0",
   "author": "airzhanglin <1015448230@qq.com>",
   "license": "MIT",
   "private": false,
@@ -34,5 +34,9 @@
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/airzhanglin/wechatPlayer"
   }
 }
